Add Hero Section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/media.css" />
   </head>
   <body>
-    <div class="wrapper">
       <header class="header">
         <nav class="header__navbar">
           <div class="container">
@@ -47,7 +46,31 @@
           </div>
         </nav>
       </header>
-    </div>
+
+
+      <section class="hero">
+        <div class="container">
+          <div class="hero__row row">
+            <div class="hero__column column">
+              <h1 class="hero__title">Work at the speed of thought</h1>
+              <p class="hero__subtitle">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+
+              <form action="" class="hero__form form">
+                <div class="form__buttons">
+                  <button class="form__accent button-accent button btn-animation">Get Started</button>
+                  <button class="form__default button-default button">
+                    <img src="images/play.svg" alt="">
+                    Watch the Video
+                  </button>
+                </div>
+              </form>
+              
+            </div>
+            <div class="hero__column column"></div>
+          </div>
+        </div>
+      </section>
+
 
     <script src="js/common.js"></script>
   </body>
