--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <div class="container">
           <div class="hero__row row">
             <div class="hero__column column">
-              <h1 class="hero__title">Work at the speed of thought</h1>
-              <p class="hero__subtitle">Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+              <h1 class="hero__title">Delight your customers on their favorite channels</h1>
+              <p class="hero__subtitle">Discover Trengo, the omnichannel communication platform that unifies all messaging channels into one single view. Make customer communication easy.</p>
 
               <form action="" class="hero__form form">
                 <div class="form__buttons">
@@ -66,7 +66,11 @@
               </form>
               
             </div>
-            <div class="hero__column column"></div>
+            <div class="column">
+							<a class="" href="#">
+								<img src="images/hero.svg" alt="">
+							</a>
+						</div>
           </div>
         </div>
       </section>
