Add toggler btn

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
           <div class="header__actions actions">
             <ul class="actions__list">
               <li class="actions__item">
-                <a class="actions__link" href="">Sign&nbsp;Up</a>
+                <a class="actions__link button" href="">Sign&nbsp;Up</a>
               </li>
             </ul>
 
-            <a class="actions__accent" href="">Sign&nbsp;In</a>
+            <a class="actions__cta button" href="">Sign&nbsp;In</a>
 
-            <button class="toggler">
+            <button class="toggler" aria-expanded="false">
 							<!-- TOGGLER OPEN -->
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -35,7 +35,7 @@
                 height="24"
                 viewBox="0 0 24 24"
                 fill="none"
-                class="injected-svg navbar-toggler-open icon icon-sm"
+                class="injected-svg toggler-open icon icon-sm"
                 data-src="https://trengo.com/themes/version2/assets/img/icons/interface/icon-menu.svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
               >
@@ -69,7 +69,7 @@
                 height="24"
                 viewBox="0 0 24 24"
                 fill="none"
-                class="injected-svg navbar-toggler-close icon icon-sm"
+                class="injected-svg toggler-close icon icon-sm"
                 data-src="https://trengo.com/themes/version2/assets/img/icons/interface/icon-x.svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink"
               >
