Add product section

--- a/index.html
+++ b/index.html
@@ -157,6 +157,53 @@
       </div>
     </section>
 
+		<section class="product">
+			<div class="container">
+				<div class="heading">
+					<h2>Product  was Built Specifically <br /> for You</h2>
+				</div>
+				<div class="row">
+					<div class="column column-sm-6 column-md-6 column-lg-3 ">
+						<div class="product__cart">
+							<img src="images/cursor.svg" alt="">
+							<h3>First click tests</h3>
+							<p>While most people enjoy casino gambling,</p>
+						</div>
+					</div>
+
+					<div class="column column-sm-6 column-md-6 column-lg-3 ">
+						<div class="product__cart">
+							<img src="images/wave.svg" alt="">
+							<h3>Design surveys</h3>
+							<p>Sports betting, lottery and bingo playing for the fun</p>
+						</div>
+					</div>
+
+					<div class="column column-sm-6 column-md-6 column-lg-3 ">
+						<div class="product__cart">
+							<img src="images/heart.svg" alt="">
+							<h3>Preference tests</h3>
+							<p>The Myspace page defines the individual.</p>
+						</div>
+					</div>
+
+					<div class="column-sm-6 column-md-6 column-lg-3 column">
+						<div class="product__cart">
+							<img src="images/clock.svg" alt="">
+							<h3>Five second tests</h3>
+							<p>Personal choices and the overall personality of the person. </p>
+						</div>
+					</div>
+
+					<div class="column">
+						<div class="product__button">
+							<a href="#" class="button">SIGN UP NOW</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
     <script src="js/common.js"></script>
   </body>
 </html>
