--- a/index.html
+++ b/index.html
@@ -163,33 +163,41 @@
 					<h2>Product  was Built Specifically <br /> for You</h2>
 				</div>
 				<div class="row">
-					<div class="column column-sm-6 column-md-6 column-lg-3 ">
+					<div class="column column-sm-6 column-md-6 column-lg-3">
 						<div class="product__cart">
-							<img src="images/cursor.svg" alt="">
+							<div class="product__icon">
+								<img src="images/cursor.svg" alt="">
+							</div>
 							<h3>First click tests</h3>
 							<p>While most people enjoy casino gambling,</p>
 						</div>
 					</div>
 
-					<div class="column column-sm-6 column-md-6 column-lg-3 ">
+					<div class="column column-sm-6 column-md-6 column-lg-3">
 						<div class="product__cart">
-							<img src="images/wave.svg" alt="">
+							<div class="product__icon">
+								<img src="images/wave.svg" alt="">
+							</div>
 							<h3>Design surveys</h3>
 							<p>Sports betting, lottery and bingo playing for the fun</p>
 						</div>
 					</div>
 
-					<div class="column column-sm-6 column-md-6 column-lg-3 ">
+					<div class="column column-sm-6 column-md-6 column-lg-3">
 						<div class="product__cart">
-							<img src="images/heart.svg" alt="">
+							<div class="product__icon">
+								<img src="images/heart.svg" alt="">
+							</div>
 							<h3>Preference tests</h3>
 							<p>The Myspace page defines the individual.</p>
 						</div>
 					</div>
 
-					<div class="column-sm-6 column-md-6 column-lg-3 column">
+					<div class="column column-sm-6 column-md-6 column-lg-3">
 						<div class="product__cart">
-							<img src="images/clock.svg" alt="">
+							<div class="product__icon">
+								<img src="images/clock.svg" alt="">
+							</div>
 							<h3>Five second tests</h3>
 							<p>Personal choices and the overall personality of the person. </p>
 						</div>
